Toolbar is not fixed height; double scrollbars removed

--- a/web/src/app/modules/views/main/editors/modules/graphical-editor/components/graphical-editor.component.css
+++ b/web/src/app/modules/views/main/editors/modules/graphical-editor/components/graphical-editor.component.css
@@ -48,7 +48,7 @@ button {
 
 .editor-body {
     width: 100%;
-    height: 90%;
+    height: 100%;
     position: relative;
     overflow: auto;
 }
@@ -57,4 +57,10 @@ button {
     position: absolute;
     top: 0px;
     z-index: -1000;
+}
+
+div .card-body {
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
 }
